--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
         <div class="col-md-4">
             <div class="well well-lg">
                 <h3>Interview Pitches</h3>
-                <p>Want to ace an interview in just a few words, welcome.</p>
+                <p>Want to learn how to start an interview right away, welcome.</p>
                 <a href="{{url_for('main.interview_pitches')}}" class="btn btn-dark -center">View</a>
             </div>
         </div>
