--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,7 @@
         <div class="col-md-4">
             <div class="well well-lg">
                 <h3>Product Pitches</h3>
-                <p>Want to talk about your products, this is the right place.</p>
+                <p>Want to talk about your products, this is the right place for you.</p>
                 <a href="{{url_for('main.product_pitches')}}" class="btn btn-dark -center">View</a>
             </div>
         </div>
